--- a/DollosaMap.html
+++ b/DollosaMap.html
@@ -75,7 +75,7 @@ The National High School can also be reached by riding a taxi, just tell
 them Quezon Hill National High School, which is in Lamug Street, Middle 
 Quezon Hill.
             </pre>
-            <h3 style="text-align: center;background-color: grey;">Much better to hava a service, just use Google map or Waze</h3>
+            <h3 style="text-align: center;background-color: grey;">Much better to have a service, just use Google map or Waze</h3>
             
 
             </ul>
